k8s-deployments/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: aks-helloworld  
  
spec:
   replicas: 2
   selector:
       matchLabels:
             app: aks-helloworld  
            

   template:
     metadata:
        labels:
          app: aks-helloworld  
         
     spec:
       containers:
       - name: aks-helloworld  
         image: acrdockerimages101.azurecr.io/java-application:latest
         
         ports:
         - containerPort: 8082
