k8s-deployments/service-deploy.yml
apiVersion: v1
kind: Service
metadata:
   name: aks-helloworld 
spec:
  type: ClusterIP      
  ports:
  - port: 80
    #  protocal: TCP
    targetPort: 8082
  selector:
    app: aks-helloworld
   ## While running on production cluster, please use 'port: 80'
